--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">sleep-timer</string>
+    <string name="app_name">Sleep Timer</string>
+    <string name="tab_timer">Timer</string>
+    <string name="tab_settings">Settings</string>
 </resources>
