--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,12 @@
     <string name="error_title">Something went wrong</string>
     <string name="error_message">Failed to load timer. Please try restart.</string>
 
-    <string name="permission_title">Device Admin Permission</string>
-    <string name="permission_description">Sleep Timer needs device administrator permission to lock your screen when the timer expires.</string>
     <string name="permission_grant_button">Grant Permission</string>
-    <string name="permission_system_explanation">Sleep Timer needs device admin permission to lock the screen when timer expires.</string>
+
+    <string name="permission_device_admin_title">Device Admin Permission</string>
+    <string name="permission_device_admin_description">Sleep Timer needs device administrator permission to lock your screen when the timer expires.</string>
+    <string name="permission_device_admin_system_explanation">Sleep Timer needs device admin permission to lock the screen when timer expires.</string>
+
+    <string name="permission_exact_alarm_title">Alarm Permission</string>
+    <string name="permission_exact_alarm_description">Sleep Timer needs permission to schedule exact alarms so the timer works precisely.</string>
 </resources>
