feat(settings): Implement settings screen

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,9 +6,13 @@
     <string name="label_hours">Часы</string>
     <string name="label_minutes">Минуты</string>
     <string name="label_seconds">Секунды</string>
+    <string name="label_hours_short">Ч</string>
+    <string name="label_minutes_short">М</string>
+    <string name="label_seconds_short">С</string>
 
     <string name="preset_minutes">%d мин</string>
     <string name="preset_hours">%d ч</string>
+    <string name="preset_seconds">%d сек</string>
 
     <string name="button_start">Старт</string>
     <string name="button_stop">Стоп</string>
@@ -31,4 +35,24 @@
     <string name="notification_title">Таймер сна</string>
     <string name="notification_action_stop">Стоп</string>
     <string name="notification_action_extend">+%d мин</string>
+
+    <string name="settings_default_duration_title">Длительность по умолчанию</string>
+    <string name="settings_default_duration_description">Длительность при запуске нового таймера</string>
+    <string name="settings_extend_duration_title">Время продления</string>
+    <string name="settings_extend_duration_description">Время, добавляемое при продлении активного таймера</string>
+    <string name="settings_presets_title">Быстрые пресеты</string>
+    <string name="settings_presets_description">Кнопки для быстрой установки длительности таймера</string>
+    <string name="settings_duration_min">%d мин</string>
+    <string name="settings_add_preset">Добавить пресет</string>
+    <string name="settings_remove_preset">Удалить пресет</string>
+    <string name="settings_add_preset_title">Добавить пресет</string>
+    <string name="settings_add_preset_description">Введите длительность в минутах</string>
+    <string name="settings_minutes_suffix">мин</string>
+    <string name="settings_add">Добавить</string>
+    <string name="settings_cancel">Отмена</string>
+    <string name="settings_apply">Применить</string>
+    <string name="settings_reset">Сбросить настройки</string>
+    <string name="settings_edit_duration_title">Установить время</string>
+    <string name="settings_min_duration_error">Минимум: %s</string>
+    <string name="settings_max_duration_error">Максимум: %s</string>
 </resources>
