--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,6 +57,9 @@
     <string name="settings_max_duration_error">Максимум: %s</string>
     <string name="settings_show_notification_title">Показывать уведомление</string>
     <string name="settings_show_notification_description">Отображать прогресс таймера в уведомлении. Изменения применятся при следующем запуске таймера.</string>
+    <string name="settings_notification_permission_title">Требуется разрешение</string>
+    <string name="settings_notification_permission_message">Для показа уведомлений включите разрешение в настройках приложения.</string>
+    <string name="settings_notification_permission_open_settings">Открыть настройки</string>
     <string name="settings_duration_sec">%d сек</string>
     <string name="settings_fade_out_title">Затухание звука</string>
     <string name="settings_fade_out_description">Плавно уменьшать громкость медиа перед окончанием таймера. Изменения применятся при следующем запуске таймера.</string>
