feat(navigation): Add About screen and refactor navigation architecture
- Add About screen with app version, GitHub link, and open source licenses
- Extract BottomNavComponent from RootComponent for cleaner separation
- Refactor navigation to use Stack pattern for both Root and BottomNav
- Add AboutLibraries dependency for automatic license collection
- Add clickable licenses header with animated scroll for landscape mode

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -73,4 +73,12 @@
     <string name="fade_notification_channel_description">Показывается при затухании звука</string>
     <string name="fade_notification_title">Затухание звука</string>
     <string name="fade_notification_text">Громкость уменьшается</string>
+
+    <string name="settings_about_title">О приложении</string>
+    <string name="settings_about_description">Версия, лицензии и исходный код</string>
+    <string name="about_title">О приложении</string>
+    <string name="about_back">Назад</string>
+    <string name="about_version">Версия %s</string>
+    <string name="about_github">Открыть на GitHub</string>
+    <string name="about_licenses_title">Лицензии открытого ПО</string>
 </resources>
